--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -6,9 +6,7 @@
     "outDir": "lib",
     "sourceMap": true,
     "strict": true,
-    "target": "es2017",
-    "baseUrl": "./src",
-    "esModuleInterop": true
+    "target": "es2017"
   },
   "compileOnSave": true,
   "include": [
