--- a/firebase.json
+++ b/firebase.json
@@ -13,25 +13,43 @@
     }
   ],
   "hosting": {
-    "target": "main",
     "public": "dist",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
     "rewrites": [
       {
         "source": "**",
         "destination": "/index.html"
       }
-    ]
-  },
-  "hosting": [
-    {
-      "target": "coaches",
-      "public": "dist",
-      "rewrites": [
-        {
-          "source": "**",
-          "destination": "/index.html"
-        }
+    ],
+    "targets": {
+      "fitapp-67d8e": [
+        "coaches"
       ]
     }
-  ]
+  },
+  "emulators": {
+    "auth": {
+      "port": 9099
+    },
+    "functions": {
+      "port": 5001
+    },
+    "firestore": {
+      "port": 8080
+    },
+    "hosting": {
+      "port": 5000
+    },
+    "pubsub": {
+      "port": 8085
+    },
+    "ui": {
+      "enabled": true,
+      "port": 4000
+    }
+  }
 }
