--- a/functions/package.json
+++ b/functions/package.json
@@ -16,8 +16,11 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "cors": "^2.8.5",
     "firebase-admin": "^11.11.0",
-    "firebase-functions": "^4.5.0"
+    "firebase-functions": "^6.3.2",
+    "openai": "^4.86.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
