--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,6 @@
 {
   "functions": [
     {
-      "source": "functions",
       "codebase": "default",
       "ignore": [
         "node_modules",
@@ -9,27 +8,20 @@
         "firebase-debug.log",
         "firebase-debug.*.log",
         "*.local"
+      ],
+      "source": "functions",
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run build"
       ]
     }
   ],
   "hosting": {
-    "public": "dist",
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ],
-    "targets": {
-      "fitapp-67d8e": [
-        "coaches"
-      ]
-    }
+    ]
   },
   "emulators": {
     "auth": {
@@ -53,22 +45,24 @@
     "ui": {
       "enabled": true
     },
-    "singleProjectMode": true
+    "singleProjectMode": true,
+    "apphosting": {
+      "port": 5002,
+      "rootDirectory": "./",
+      "startCommand": "npm run dev"
+    },
+    "database": {
+      "port": 9000
+    },
+    "tasks": {
+      "port": 9499
+    }
   },
   "firestore": {
+    "database": "(default)",
+    "location": "eur3",
     "rules": "firestore.rules",
-    "indexes": {
-      "indexes": [
-        {
-          "collectionGroup": "coaches",
-          "queryScope": "COLLECTION",
-          "fields": [
-            { "fieldPath": "subdomain", "order": "ASCENDING" },
-            { "fieldPath": "active", "order": "ASCENDING" }
-          ]
-        }
-      ]
-    }
+    "indexes": "firestore.indexes.json"
   },
   "storage": {
     "rules": "storage.rules"
