--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "firebase-admin": "^13.6.0",
     "firebase-functions": "^7.0.0",
-    "openai": "^6.15.0"
+    "openai": "^6.15.0",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.4.1",
